GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/Disruption_Help_Preference__c.object-meta.xml
<CustomObject>
    <description>List of the help preferences available during a disruption through the webform</description>
    <label>Disruption Preference</label>
    <nameField>
        <label>Disruption Preference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disruption Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>