GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to flag Carmen Action to be archived and removed from active use</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>