GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Disruption Preferences</relationshipLabel>
    <relationshipName>Disruption_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>