GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/display_order_PREFERENCE_DAY_in_number__c.field-meta.xml
<CustomField>
    <fullName>display_order_PREFERENCE_DAY_in_number__c</fullName>
    <description>NOT TO BE DISPLAYED 
This formula convert the day of the preference in a number 
Monday-&gt;1,Tuesday-&gt;2,...,Sunday-&gt;7</description>
    <formula>IF
(
	CONTAINS(Name, &quot;Monday&quot;),
	1,
	IF
	(
		CONTAINS(Name, &quot;Tuesday&quot;),
		2,
		IF
		(
			CONTAINS(Name, &quot;Wednesday&quot;),
			3,
			IF
			(
				CONTAINS(Name, &quot;Thursday&quot;),
				4,
				IF
				(
					CONTAINS(Name, &quot;Friday&quot;),
					5,
					IF
					(
						CONTAINS(Name, &quot;Saturday&quot;),
						6,
						IF
						(
							CONTAINS(Name, &quot;Sunday&quot;),
							7,
							IF
							(
								CONTAINS(Name, &quot;refund&quot;),
								100,
								1000
							)
						)
					)
				)
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NOT TO BE DISPLAYED 
This formula convert the day of the preference in a number 
Monday-&gt;1,Tuesday-&gt;2,...,Sunday-&gt;7</inlineHelpText>
    <label>display_order_PREFERENCE_DAY_in_number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>