GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/display_order_TODAY_in_number__c.field-meta.xml
<CustomField>
    <fullName>display_order_TODAY_in_number__c</fullName>
    <description>NOT TO BE DISPLAYED
This formula convert today&#39;s date in a number
Monday-&gt;1,Tuesday-&gt;2,...,Sunday-&gt;7</description>
    <formula>CASE( MOD(  TODAY() - DATE(1900, 1, 7), 7), 0, 7, 1, 1, 2, 2, 3,
3, 4, 4, 5, 5, 6, 6,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NOT TO BE DISPLAYED
This formula convert today&#39;s date in a number
Monday-&gt;1,Tuesday-&gt;2,...,Sunday-&gt;7</inlineHelpText>
    <label>display_order_TODAY_in_number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>