GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/Dutch_translation__c.field-meta.xml
<CustomField>
    <fullName>Dutch_translation__c</fullName>
    <description>Dutch translation of the help preference
Will be displayed on the dutch version of the disruption webform if the checkbox &quot;visible&quot; is checked</description>
    <inlineHelpText>Dutch translation of the help preference
Will be displayed on the dutch version of the disruption webform if the checkbox &quot;visible&quot; is checked</inlineHelpText>
    <label>Dutch translation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>