GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/French_translation__c.field-meta.xml
<CustomField>
    <fullName>French_translation__c</fullName>
    <description>French translation of the help preference
Will be displayed on the french version of the disruption webform if the checkbox &quot;visible&quot; is checked</description>
    <inlineHelpText>French translation of the help preference
Will be displayed on the french version of the disruption webform if the checkbox &quot;visible&quot; is checked</inlineHelpText>
    <label>French translation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>