GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/German_translation__c.field-meta.xml
<CustomField>
    <fullName>German_translation__c</fullName>
    <description>German translation of the help preference
Will be displayed on the German version of the disruption webform if the checkbox &quot;visible&quot; is checked</description>
    <inlineHelpText>German translation of the help preference
Will be displayed on the German version of the disruption webform if the checkbox &quot;visible&quot; is checked</inlineHelpText>
    <label>German translation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>