GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/Number_of_Slots_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Slots_Available__c</fullName>
    <label>Number of Slots Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>