GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Order of priority during disruption
1 is the first priority
2 is the second,
etc...</description>
    <inlineHelpText>Order of priority during disruption
1 is the first priority
2 is the second,
etc...</inlineHelpText>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>