GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/validationRules/Top_3_Priorities_Must_Have_An_Allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Top_3_Priorities_Must_Have_An_Allocation</fullName>
    <active>true</active>
    <errorConditionFormula>(Priority__c = 1
||
Priority__c = 2
||
Priority__c = 3)
&amp;&amp;
ISBLANK(Number_of_Slots_Available__c)</errorConditionFormula>
    <errorDisplayField>Number_of_Slots_Available__c</errorDisplayField>
    <errorMessage>Please add the number of spaces we have available</errorMessage>
</ValidationRule>