GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>Visible__c</columns>
    <columns>Priority__c</columns>
    <columns>French_translation__c</columns>
    <columns>Dutch_translation__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
    <language>en_US</language>
</ListView>