GearsetPOC/force-app/main/default/objects/Disruption_Help_Preference__c/listViews/Archived.listView-meta.xml
<ListView>
    <fullName>Archived</fullName>
    <columns>Archived__c</columns>
    <columns>NAME</columns>
    <columns>Visible__c</columns>
    <columns>Priority__c</columns>
    <columns>French_translation__c</columns>
    <columns>Dutch_translation__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Archived</label>
    <language>en_US</language>
</ListView>